--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Баскет</title>
+    <title>Баскет</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css" media="screen">
 </head>
+
 <body>
-    <h1>Баскет</h1>
+    <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+        <div class="container">
+            <a href="./index.html" class="navbar-brand">Баскет</a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbarResponsive" style="">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="themes">Теория
+                            <span class="caret"></span>
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="themes">
+                            <a class="dropdown-item" href="./refer.html">Рефери</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="./secretar.html">Секретарски апарат</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./tests.html">Тестове</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacts.html">Констакти</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+    <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
+    <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://bootswatch.com/_assets/js/custom.js"></script>
 </body>
+
 </html>
