--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,31 @@
 
 <head>
     <title>Баскет</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
 </head>
 
 <body>
     <div data-include="./templates/nav-bar.html"></div>
+
+    <div class="container main-content">
+        <div class="page-header" id="banner">
+            <div class="row">
+                <div class="col-lg-8 col-md-7 col-sm-6">
+                    <h1>Баскет</h1>
+                    <p class="lead">
+                        Здравейте, това е платформата за
+                        подготовка на баскетболни съдии {име}
+                        Ако проявявате интерес за съдия, посетете раздел рефери.Ако проявявате
+                        интерес за член на секретарския апарат, посетете раздел секретарски апарат
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
     <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
