added logo and changed theme

--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Баскет</title>
-    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" media="screen">
 </head>
 
 <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
         <div class="container">
-            <a href="./index.html" class="navbar-brand">Баскет</a>
+            <a href="./index.html" class="navbar-brand"><img src="resources/ball.png" width="100px" height="100px"></a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./tests.html">Тестове</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contacts.html">Констакти</a>
+                        <a class="nav-link" href="./contacts.html">Контакти</a>
                     </li>
                 </ul>
 
