changed theme on the rest of the pages and fixed a typo

--- a/app/refer.html
+++ b/app/refer.html
@@ -4,7 +4,7 @@
 <head>
     <title>Рефери</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="./styles/main.css" media="screen">    
     <script src="./scripts/lib/csi.min.js"></script>
 </head>
