--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -21,7 +21,7 @@
                         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Избери тест...
                             <span class="caret"></span></button>
                         <ul class="dropdown-menu">
-                            <li><a href="tests_1_to_3.html">Членове 1-3</a></li>
+                            <li><a href="#">Членове 1-3</a></li>
                             <li><a href="tests_4_to_6.html">Членове 4-6</a></li>
                             <li class="divider"><hr></li>
                             <li><a href="tests_final.html">Финален тест</a></li>
