--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -22,7 +22,7 @@
                             <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="tests_1_to_3.html">Членове 1-3</a></li>
-                            <li><a href="tests_4_to_6.html">Членове 4-6</a></li>
+                            <li><a href="#">Членове 4-6</a></li>
                             <li class="divider"><hr></li>
                             <li><a href="tests_final.html">Финален тест</a></li>
                         </ul>
