--- a/app/tests_final.html
+++ b/app/tests_final.html
@@ -24,7 +24,7 @@
                             <li><a href="tests_1_to_3.html">Членове 1-3</a></li>
                             <li><a href="tests_4_to_6.html">Членове 4-6</a></li>
                             <li class="divider"><hr></li>
-                            <li><a href="tests_final.html">Финален тест</a></li>
+                            <li><a href="#">Финален тест</a></li>
                         </ul>
                     </div>
                 </div>
