added start test buttons

--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -27,6 +27,10 @@
                             <li><a href="tests_final.html">Финален тест</a></li>
                         </ul>
                     </div>
+                    <div class="main-content">
+                        Време за решаване на теста - 10 минути. Започване?
+                        <button class="btn btn-primary">Започване</button>
+                    </div>
                 </div>
             </div>
         </div>
