--- a/app/tests_final.html
+++ b/app/tests_final.html
@@ -37,7 +37,53 @@
         </div>
     </div>
 
-    <div id="countdown"></div>
+    <div id="test" class="pull-right" style="display: none">
+        <div id="countdown"></div>
+        <form>
+            Въпрос 1<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 2<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 3<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 4<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 5<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 6<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 7<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+            Въпрос 8<br>
+            <input type="radio" name="question_1" value="otg1"><br>
+            <input type="radio" name="question_1" value="otg2"><br>
+            <input type="radio" name="question_1" value="otg3"><br>
+            <input type="radio" name="question_1" value="otg4"><br>
+
+
+        </form>
+    </div>
     <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
     <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
