added end test button

--- a/app/tests_final.html
+++ b/app/tests_final.html
@@ -39,6 +39,7 @@
 
     <div id="test" class="pull-right" style="display: none">
         <div id="countdown"></div>
+        <button id="finishTestButton" class="btn btn-primary" onclick="alert('Сигурен ли сте, че искате да приключите теста?')">Приключване</button>
         <form>
             Въпрос 1<br>
             <input type="radio" name="question_1" value="otg1"><br>
