--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -3,91 +3,96 @@
 
 <head>
     <title>Тестове</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="./styles/main.css" media="screen">    
+    <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
     <script src="./scripts/clock.js"></script>
 </head>
 
 <body>
-    <div data-include="./templates/nav-bar.html"></div>
+<div data-include="./templates/nav-bar.html"></div>
 
-    <div class="container main-content">
-        <div class="page-header" id="banner">
-            <div class="row">
-                <div class="col-lg-8 col-md-7 col-sm-6">
-                    <br>
-                    <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Избери тест...
-                            <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="tests_1_to_3.html">Членове 1-3</a></li>
-                            <li><a href="#">Членове 4-6</a></li>
-                            <li class="divider"><hr></li>
-                            <li><a href="tests_final.html">Финален тест</a></li>
-                        </ul>
-                    </div>
-                    <div class="main-content" id="test-start-warning">
-                        Време за решаване на теста - 10 минути. Започване?
-                        <button class="btn btn-primary" id="startTest" onclick="startCountDown()">Започване</button>
-                    </div>
+<div class="container main-content">
+    <div class="page-header" id="banner">
+        <div class="row">
+            <div class="col-lg-8 col-md-7 col-sm-6">
+                <br>
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Избери тест...
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href="tests_1_to_3.html">Членове 1-3</a></li>
+                        <li><a href="#">Членове 4-6</a></li>
+                        <li class="divider">
+                            <hr>
+                        </li>
+                        <li><a href="tests_final.html">Финален тест</a></li>
+                    </ul>
+                </div>
+                <div class="main-content" id="test-start-warning">
+                    Време за решаване на теста - 10 минути. Започване?
+                    <button class="btn btn-primary" id="startTest" onclick="startCountDown()">Започване</button>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div id="test" class="pull-right" style="display: none">
-        <div id="countdown"></div>
-        <form>
-            Въпрос 1<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 2<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 3<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 4<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 5<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 6<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 7<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
-            Въпрос 8<br>
-            <input type="radio" name="question_1" value="otg1"><br>
-            <input type="radio" name="question_1" value="otg2"><br>
-            <input type="radio" name="question_1" value="otg3"><br>
-            <input type="radio" name="question_1" value="otg4"><br>
+<div id="test" class="pull-right" style="display: none">
+    <div id="countdown"></div>
+    <button id="finishTestButton" class="btn btn-primary"
+            onclick="alert('Сигурен ли сте, че искате да приключите теста?')">Приключване
+    </button>
+    <form>
+        Въпрос 1<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 2<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 3<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 4<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 5<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 6<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 7<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
+        Въпрос 8<br>
+        <input type="radio" name="question_1" value="otg1"><br>
+        <input type="radio" name="question_1" value="otg2"><br>
+        <input type="radio" name="question_1" value="otg3"><br>
+        <input type="radio" name="question_1" value="otg4"><br>
 
 
-        </form>
-    </div>
-    <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
-    <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
-    <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="https://bootswatch.com/_assets/js/custom.js"></script>
+    </form>
+</div>
+<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+<script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://bootswatch.com/_assets/js/custom.js"></script>
 </body>
 
 </html>
