minor change on question form

--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -46,47 +46,45 @@
     </button>
     <form>
         Въпрос 1<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_1">a<br>
+        <input type="radio" name="question_1">b<br>
+        <input type="radio" name="question_1">c<br>
+        <input type="radio" name="question_1">d<br>
         Въпрос 2<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_2">a<br>
+        <input type="radio" name="question_2">b<br>
+        <input type="radio" name="question_2">c<br>
+        <input type="radio" name="question_2">d<br>
         Въпрос 3<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_3">a<br>
+        <input type="radio" name="question_3">b<br>
+        <input type="radio" name="question_3">c<br>
+        <input type="radio" name="question_3">d<br>
         Въпрос 4<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_4">a<br>
+        <input type="radio" name="question_4">b<br>
+        <input type="radio" name="question_4">c<br>
+        <input type="radio" name="question_4">d<br>
         Въпрос 5<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_5">a<br>
+        <input type="radio" name="question_5">b<br>
+        <input type="radio" name="question_5">c<br>
+        <input type="radio" name="question_5">d<br>
         Въпрос 6<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_6">a<br>
+        <input type="radio" name="question_6">b<br>
+        <input type="radio" name="question_6">c<br>
+        <input type="radio" name="question_6">d<br>
         Въпрос 7<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
+        <input type="radio" name="question_7">a<br>
+        <input type="radio" name="question_7">b<br>
+        <input type="radio" name="question_7">c<br>
+        <input type="radio" name="question_7">d<br>
         Въпрос 8<br>
-        <input type="radio" name="question_1" value="otg1"><br>
-        <input type="radio" name="question_1" value="otg2"><br>
-        <input type="radio" name="question_1" value="otg3"><br>
-        <input type="radio" name="question_1" value="otg4"><br>
-
-
+        <input type="radio" name="question_8">a<br>
+        <input type="radio" name="question_8">b<br>
+        <input type="radio" name="question_8">c<br>
+        <input type="radio" name="question_8">d<br>
     </form>
 </div>
 <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
