added json with questions -> right answers mapping

--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -45,51 +45,48 @@
         <div id="countdown"></div>
         <button id="finishTestButton" class="btn btn-primary" onclick="finishTest()">Приключване</button>
     </div>
-    <form>
         Въпрос 1<br>
-        <span class="glyphicon glyphicon-user blue" style="display: none">r34t3gthr</span><input type="radio" name="question_1">a<br>
-        <input type="radio" name="question_1">b<br>
-        <input type="radio" name="question_1">c<br>
-        <input type="radio" name="question_1">d<br>
+        <input type="radio" name="question_1" value="a">a<br>
+        <input type="radio" name="question_1" value="b">b<br>
+        <input type="radio" name="question_1" value="c">c<br>
+        <input type="radio" name="question_1" value="d">d<br>
         Въпрос 2<br>
-        <input type="radio" name="question_2">a<br>
-        <input type="radio" name="question_2">b<br>
-        <input type="radio" name="question_2">c<br>
-        <input type="radio" name="question_2">d<br>
+        <input type="radio" name="question_2" value="a">a<br>
+        <input type="radio" name="question_2" value="b">b<br>
+        <input type="radio" name="question_2" value="c">c<br>
+        <input type="radio" name="question_2" value="d">d<br>
         Въпрос 3<br>
-        <input type="radio" name="question_3">a<br>
-        <input type="radio" name="question_3">b<br>
-        <input type="radio" name="question_3">c<br>
-        <input type="radio" name="question_3">d<br>
+        <input type="radio" name="question_3" value="a">a<br>
+        <input type="radio" name="question_3" value="b">b<br>
+        <input type="radio" name="question_3" value="c">c<br>
+        <input type="radio" name="question_3" value="d">d<br>
         Въпрос 4<br>
-        <input type="radio" name="question_4">a<br>
-        <input type="radio" name="question_4">b<br>
-        <input type="radio" name="question_4">c<br>
-        <input type="radio" name="question_4">d<br>
+        <input type="radio" name="question_4" value="a">a<br>
+        <input type="radio" name="question_4" value="b">b<br>
+        <input type="radio" name="question_4" value="c">c<br>
+        <input type="radio" name="question_4" value="d">d<br>
         Въпрос 5<br>
-        <input type="radio" name="question_5">a<br>
-        <input type="radio" name="question_5">b<br>
-        <input type="radio" name="question_5">c<br>
-        <input type="radio" name="question_5">d<br>
+        <input type="radio" name="question_5" value="a">a<br>
+        <input type="radio" name="question_5" value="b">b<br>
+        <input type="radio" name="question_5" value="c">c<br>
+        <input type="radio" name="question_5" value="d">d<br>
         Въпрос 6<br>
-        <input type="radio" name="question_6">a<br>
-        <input type="radio" name="question_6">b<br>
-        <input type="radio" name="question_6">c<br>
-        <input type="radio" name="question_6">d<br>
+        <input type="radio" name="question_6" value="a">a<br>
+        <input type="radio" name="question_6" value="b">b<br>
+        <input type="radio" name="question_6" value="c">c<br>
+        <input type="radio" name="question_6" value="d">d<br>
         Въпрос 7<br>
-        <input type="radio" name="question_7">a<br>
-        <input type="radio" name="question_7">b<br>
-        <input type="radio" name="question_7">c<br>
-        <input type="radio" name="question_7">d<br>
+        <input type="radio" name="question_7" value="a">a<br>
+        <input type="radio" name="question_7" value="b">b<br>
+        <input type="radio" name="question_7" value="c">c<br>
+        <input type="radio" name="question_7" value="d">d<br>
         Въпрос 8<br>
-        <input type="radio" name="question_8">a<br>
-        <input type="radio" name="question_8">b<br>
-        <input type="radio" name="question_8">c<br>
-        <input type="radio" name="question_8">d<br>
-    </form>
+        <input type="radio" name="question_8" value="a">a<br>
+        <input type="radio" name="question_8" value="b">b<br>
+        <input type="radio" name="question_8" value="c">c<br>
+        <input type="radio" name="question_8" value="d">d<br>
 </div>
 <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
-<script src="./resources/cookie.js" type="text/javascript"></script>
 <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
 <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="https://bootswatch.com/_assets/js/custom.js"></script>
