--- a/app/tests.html
+++ b/app/tests.html
@@ -3,39 +3,41 @@
 
 <head>
     <title>Тестове</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="./styles/main.css" media="screen">    
+    <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
 </head>
 
 <body>
-    <div data-include="./templates/nav-bar.html"></div>
+<div data-include="./templates/nav-bar.html"></div>
 
-    <div class="container main-content">
-        <div class="page-header" id="banner">
-            <div class="row">
-                <div class="col-lg-8 col-md-7 col-sm-6">
-                    <br>
-                    <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Избери тест...
-                            <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                            <li><a href="tests_1_to_3.html">Членове 1-3</a></li>
-                            <li><a href="tests_4_to_6.html">Членове 4-6</a></li>
-                            <li class="divider"><hr></li>
-                            <li><a href="tests_final.html">Финален тест</a></li>
-                        </ul>
-                    </div>
+<div class="container main-content">
+    <div class="page-header" id="banner">
+        <div class="row">
+            <div class="col-lg-8 col-md-7 col-sm-6">
+                <br>
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Избери тест...
+                        <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href="tests_1_to_3.html">Правило 1-3</a></li>
+                        <li><a href="tests_4_to_6.html">Правило 4-6</a></li>
+                        <li class="divider">
+                            <hr>
+                        </li>
+                        <li><a href="tests_final.html">Финален тест</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
-    <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
-    <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="https://bootswatch.com/_assets/js/custom.js"></script>
+<script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
+<script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://bootswatch.com/_assets/js/custom.js"></script>
 </body>
 
 </html>
