added questions with images and video content

--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -54,7 +54,7 @@
     <input type="radio" name="question_2" value="b">трябва да се въздържат от прекъсване на игра при "жива" топка, освен ако не трябва да се предпази наранен състезател<br>
     <input type="radio" name="question_2" value="c">при никакви обстоятелства не трябва да прекъсват играта<br>
     3. Треньорът трябва да представи списък с имената на участниците в срещата и капитана най-малко:<br>
-    <input type="radio" name="question_3" value="a">1 минута преди началото на срешата<br>
+    <input type="radio" name="question_3" value="a">1 минута преди началото на срещата<br>
     <input type="radio" name="question_3" value="b">5 минути преди началото на срещата<br>
     <input type="radio" name="question_3" value="c">20 минути преди началото на срещата<br>
     4. Топката има статут на "жива", когато:<br>
