--- a/app/refer.html
+++ b/app/refer.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="./styles/main.css" media="screen">    
     <script src="./scripts/lib/csi.min.js"></script>
+    <script src="./scripts/lib/mustache.js"></script>
 </head>
 
 <body>
     <div data-include="./templates/nav-bar.html"></div>
 
+    <div id="data-list" class="main-content">{{#data}} Hello {{ name }} {{/data}}</div>
+
     <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
     <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="https://bootswatch.com/_assets/js/custom.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 
 </html>
