--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -45,13 +45,14 @@
         <div id="countdown"></div>
         <button id="finishTestButton" class="btn btn-primary" onclick="finishTest('./resources/answers_4_6.json')">Приключване</button>
     </div>
-    1.При вкарване на топката в игра отвън от до момента атакуващия отбор в предното си поле и при 13 или по-малко секунди за атака:<br>
+    1.Когато на отбора, който е бил във владение на топката преди това се дава право да вкара топката в игра отвън в предното си поле и
+    има 13 или по-малко секунди за атака, часовникът за 24 секунди:<br>
     <input type="radio" name="question_1" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди<br>
     <input type="radio" name="question_1" value="b"> часовникът за 24 секунди се спира, но не се връща на 24 секунди<br>
     <input type="radio" name="question_1" value="c"> часовникът за 24 секунди се спира и се връща на 24 секунди<br><br>
     2. Времеизмервачът пуска часовникът за игра, когато:<br>
     <input type="radio" name="question_2" value="a">при изпълнение на “спорна топка” топката е редовно отплесната от един от скачащите състезатели<br>
-    <input type="radio" name="question_2" value="b">след пропуснат последен или единствен наказателен удар, където топаката се отбива в ринга и докосне състезател<br>
+    <input type="radio" name="question_2" value="b">след изпълнение на несполучлив последен или единствен наказателен удар, след който топката продължава да е “жива” и  докосне или е докосната от състезател на игралното поле<br>
     <input type="radio" name="question_2" value="c">при вкарване на топката в игра отвън тя докосне или е докосната от състезател в игралното поле.<br>
     <input type="radio" name="question_2" value="d">и трите отговора са верни<br><br>
     3. В протокола за дадена среща, лично нарушение на играч се отбелязва:<br>
