added answers and bigger countdown for final test

--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="main-content" id="test-start-warning">
                     Време за решаване на теста - 10 минути. Започване?
-                    <button class="btn btn-primary" id="startTest" onclick="startCountDown()">Започване</button>
+                    <button class="btn btn-primary" id="startTest" onclick="startCountDown(602000)">Започване</button>
                 </div>
             </div>
         </div>
@@ -80,7 +80,7 @@
     <input type="radio" name="question_8" value="a">от треньора<br>
     <input type="radio" name="question_8" value="b">от помощник-треньора<br>
     <input type="radio" name="question_8" value="c">от капитана на отбора<br>
-    <input type="radio" name="question_8" value="d">да бъде поискана от играчам който ще влезе от скамейката<br>
+    <input type="radio" name="question_8" value="d">да бъде поискана от играча, който ще влезе от скамейката<br>
 </div>
 <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
 <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
