--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="main-content" id="test-start-warning">
                     Време за решаване на теста - 10 минути. Започване?
-                    <button class="btn btn-primary" id="startTest" onclick="startCountDown()">Започване</button>
+                    <button class="btn btn-primary" id="startTest" onclick="startCountDown(602000)">Започване</button>
                 </div>
             </div>
         </div>
