--- a/app/tests_final.html
+++ b/app/tests_final.html
@@ -32,8 +32,8 @@
                     </ul>
                 </div>
                 <div class="main-content" id="test-start-warning">
-                    Време за решаване на теста - 10 минути. Започване?
-                    <button class="btn btn-primary" id="startTest" onclick="startCountDown()">Започване</button>
+                    Време за решаване на теста - 30 минути. Започване?
+                    <button class="btn btn-primary" id="startTest" onclick="startCountDown(1800000)">Започване</button>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
     <input type="radio" name="question_2" value="b">трябва да се въздържат от прекъсване на игра при "жива" топка, освен ако не трябва да се предпази наранен състезател<br>
     <input type="radio" name="question_2" value="c">при никакви обстоятелства не трябва да прекъсват играта<br>
     3. Треньорът трябва да представи списък с имената на участниците в срещата и капитана най-малко:<br>
-    <input type="radio" name="question_3" value="a">1 минута преди началото на срешата<br>
+    <input type="radio" name="question_3" value="a">1 минута преди началото на срещата<br>
     <input type="radio" name="question_3" value="b">5 минути преди началото на срещата<br>
     <input type="radio" name="question_3" value="c">20 минути преди началото на срещата<br>
     4. Топката има статут на "жива", когато:<br>
@@ -80,7 +80,54 @@
     <input type="radio" name="question_8" value="a">от треньора<br>
     <input type="radio" name="question_8" value="b">от помощник-треньора<br>
     <input type="radio" name="question_8" value="c">от капитана на отбора<br>
-    <input type="radio" name="question_8" value="d">да бъде поискана от играчам който ще влезе от скамейката<br>
+    <input type="radio" name="question_8" value="d">да бъде поискана от играча, който ще влезе от скамейката<br><br>
+    9.Когато на отбора, който е бил във владение на топката преди това се дава право да вкара топката в игра отвън в предното си поле и
+    има 13 или по-малко секунди за атака, часовникът за 24 секунди:<br>
+    <input type="radio" name="question_9" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди<br>
+    <input type="radio" name="question_9" value="b"> часовникът за 24 секунди се спира, но не се връща на 24 секунди<br>
+    <input type="radio" name="question_9" value="c"> часовникът за 24 секунди се спира и се връща на 24 секунди<br><br>
+    10. Времеизмервачът пуска часовникът за игра, когато:<br>
+    <input type="radio" name="question_10" value="a">при изпълнение на “спорна топка” топката е редовно отплесната от един от скачащите състезатели<br>
+    <input type="radio" name="question_10" value="b">след изпълнение на несполучлив последен или единствен наказателен удар, след който топката продължава да е “жива” и  докосне или е докосната от състезател на игралното поле<br>
+    <input type="radio" name="question_10" value="c">при вкарване на топката в игра отвън тя докосне или е докосната от състезател в игралното поле.<br>
+    <input type="radio" name="question_10" value="d">и трите отговора са верни<br><br>
+    11. В протокола за дадена среща, лично нарушение на играч се отбелязва:<br>
+    <input type="radio" name="question_11" value="a">с буквата P без индекс за поредност на нарушението<br>
+    <input type="radio" name="question_11" value="b">с буквата D<br>
+    <input type="radio" name="question_11" value="c">с буквата P, като се вписва малък индекс долу вдясно за поредността на нарушението за дадения играч<br><br>
+    12. В протокола за дадена среща, отбелязан наказателен удар се означава<br>
+    <input type="radio" name="question_12" value="a">със запълнено кръгче<br>
+    <input type="radio" name="question_12" value="b">с диагонална чертичка,заедно с нанесен номер на играча, отбелязал наказателния удар, в съседното празно квадратче<br>
+    <input type="radio" name="question_12" value="c">със запълнено кръгче,заедно с нанесен номер на играча, отбелязал наказателния удар, в съседното празно квадратче<br><br>
+    13. За загуба на даден отбор се дават:<br>
+    <input type="radio" name="question_13" value="a">0 точки<br>
+    <input type="radio" name="question_13" value="b">1 точка<br>
+    <input type="radio" name="question_13" value="c">2 точки<br><br>
+    14. Ако отборите не са изиграли всичките си срещи и ако 2 или повече отбори имат еднакъв резултат от победи и загуби:<br>
+    <input type="radio" name="question_14" value="a">най-голямата голова разлика от всички играни срещи на тези отбори до този момент решава класирането<br>
+    <input type="radio" name="question_14" value="b">резултатът от директните двубои решава класирането<br>
+    <input type="radio" name="question_14" value="c">се играе бараж за определяне на това кой отбор да бъде по-напред в класирането<br><br>
+    15. Какъв тип нарушение се отсъжда с жеста от картинката:<br>
+    <img src="resources/gestures-53.jpg"><br>
+    <input type="radio" name="question_15" value="a">стандартно лично нарушение(в защита)<br>
+    <input type="radio" name="question_15" value="b">техническо нарушение<br>
+    <input type="radio" name="question_15" value="c">неспортсменско нарушение<br>
+    <input type="radio" name="question_15" value="d">нарушение в нападение<br><br>
+    16. Коя от посочените грешки се отсъжда с жеста от картинката:<br>
+    <img src="./resources/gestures-17.jpg"><br>
+    <input type="radio" name="question_16" value="a">двоен дрибъл<br>
+    <input type="radio" name="question_16" value="b">"крачки"<br>
+    <input type="radio" name="question_16" value="c">носена топка<br>
+    <input type="radio" name="question_16" value="d">върната топка<br><br>
+    17. Коя от посочените грешки се отсъжда от съдията във видеото:<br>
+    <video width="400" height="345" controls>
+        <source src="./resources/violation.mp4" type="video/mp4">
+    </video><br>
+    <input type="radio" name="question_17" value="a">двоен дрибъл<br>
+    <input type="radio" name="question_17" value="b">"крачки"<br>
+    <input type="radio" name="question_17" value="c">носена топка<br>
+    <input type="radio" name="question_17" value="d">върната топка<br><br>
+    <br>
 </div>
 <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
 <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
