added questions in FAQ page

--- a/app/faq.html
+++ b/app/faq.html
@@ -4,7 +4,8 @@
 <head>
     <title>Контакти</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.css" media="screen">\
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.css" media="screen">
+    \
     <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
 </head>
@@ -13,7 +14,29 @@
 <div data-include="./templates/nav-bar.html"></div>
 
 <div class="container main-content">
-    <p>FAQ</p>
+    <h2>Често задавани въпроси</h2>
+    <div>
+        <div class="faq">
+            <p class="faq">Как да отворя урок за рефер?</p>
+            Изберете "Теория" –> "Рефер".
+        </div>
+        <br>
+        <div class="faq">
+            <p class="faq">Как да отворя урок за член на секретарски апарат?</p>
+            Изберете "Теория" –> "Секретарски апарат".
+        </div>
+        <br>
+        <div class="faq">
+            <p class="faq">Как да отворя тест за конкретен раздел?</p>
+            отворете "Тестове" и от падащото меню "Изберете тестове" изберете раздела, за който искате
+            да стартирате тест.
+        </div>
+        <br>
+        <div class="faq">
+            <p class="faq">Допълнителни въпроси?</p>
+            За допълнителни въпроси вижте <a href="about_us.html">За нас</a> .</div>
+    </div>
+    <br>
 </div>
 
 <script src="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js"></script>
