deleted html page

--- a/app/faq.html
+++ b/app/faq.html
@@ -5,7 +5,6 @@
     <title>Контакти</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.css" media="screen">
-    \
     <link rel="stylesheet" href="./styles/main.css" media="screen">
     <script src="./scripts/lib/csi.min.js"></script>
 </head>
@@ -18,17 +17,17 @@
     <div>
         <div class="faq">
             <p class="faq">Как да отворя урок за рефер?</p>
-            Изберете "Теория" –> "Рефер".
+            Изберете <a href="refer.html">Рефери</a> .
         </div>
         <br>
         <div class="faq">
             <p class="faq">Как да отворя урок за член на секретарски апарат?</p>
-            Изберете "Теория" –> "Секретарски апарат".
+            Изберете <a href="secretar.html">Секретарски апарат</a> .
         </div>
         <br>
         <div class="faq">
             <p class="faq">Как да отворя тест за конкретен раздел?</p>
-            отворете "Тестове" и от падащото меню "Изберете тестове" изберете раздела, за който искате
+            Отворете <a href="tests.html">Тестове</a> и от падащото меню "Изберете тестове" изберете раздела, за който искате
             да стартирате тест.
         </div>
         <br>
