added correctlyAnswered/numberOfQuestions feedback

--- a/app/tests_4_to_6.html
+++ b/app/tests_4_to_6.html
@@ -45,6 +45,7 @@
         <div id="countdown"></div>
         <button id="finishTestButton" class="btn btn-primary" onclick="finishTest('./resources/answers_4_6.json')">Приключване</button>
     </div>
+    <div id="test_result"></div>
     1.Когато на отбора, който е бил във владение на топката преди това се дава право да вкара топката в игра отвън в предното си поле и
     има 13 или по-малко секунди за атака, часовникът за 24 секунди:<br>
     <input type="radio" name="question_1" value="a"> часовникът за 24 секунди се спира и се връща на 14 секунди<br>
