--- a/app/tests_1_to_3.html
+++ b/app/tests_1_to_3.html
@@ -45,6 +45,7 @@
         <div id="countdown"></div>
         <button id="finishTestButton" class="btn btn-primary" onclick="finishTest('./resources/answers_1_3.json')">Приключване</button>
     </div>
+    <div id="test_result"></div>
     1. Колко състезатели точно трябва да са на игралното поле по време на игра за всеки отбор?<br>
     <input type="radio" name="question_1" value="a">5<br>
     <input type="radio" name="question_1" value="b">6<br>
